// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostController Create should return a post 1`] = `
{
  "author": {
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
  "createdAt": 2000-01-01T00:00:00.000Z,
  "id": "id-1",
  "images": [
    {
      "id": "id-1",
      "url": "https://example.com/image1.jpg",
    },
  ],
  "isLiked": false,
  "likes": 0,
  "text": "This is a post",
}
`;

exports[`PostController FindMany should return an array of post 1`] = `
{
  "count": 1,
  "items": [
    {
      "author": {
        "name": "John Doe",
        "profileImg": null,
        "username": "johndoe",
      },
      "createdAt": 2000-01-01T00:00:00.000Z,
      "id": "id-1",
      "images": [
        {
          "id": "id-1",
          "url": "https://example.com/image1.jpg",
        },
      ],
      "isLiked": false,
      "likes": 0,
      "text": "This is a post",
    },
  ],
}
`;

exports[`PostController FindOne should return a post 1`] = `
{
  "author": {
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
  "createdAt": 2000-01-01T00:00:00.000Z,
  "id": "id-1",
  "images": [
    {
      "id": "id-1",
      "url": "https://example.com/image1.jpg",
    },
  ],
  "isLiked": false,
  "likes": 0,
  "text": "This is a post",
}
`;
